# datasaur

./: .gitignore
backend-new/: .env.example  .gitignore  Dockerfile  README.md  RUN_LOCAL.md  evaluate.py  pyproject.toml  supabase_migration.sql  system_prompt.txt
backend-new/clindiag/: .dockerignore  .env.example  DEPLOY.md  Dockerfile  README_RAG.md  build_index.py  docker-compose.yml  eval_run.py  prompts.json  pyproject.toml  rag_query.py  requirements.txt  self_refine.py
backend-new/clindiag/frontend/: .gitignore  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
backend-new/clindiag/frontend/src/app/: globals.css  layout.tsx  page.tsx
backend-new/clindiag/frontend/src/app/api/backend/[...path]/: route.ts
backend-new/clindiag/frontend/src/components/: AnamnesisForm.tsx  EmptyState.tsx  ResultsCard.tsx  SkeletonResult.tsx
backend-new/clindiag/frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  skeleton.tsx  textarea.tsx
backend-new/clindiag/frontend/src/lib/: api.ts
backend-new/clindiag/frontend/src/types/: index.ts
backend-new/clindiag/src/: diagnose_server.py  predict_server.py
backend-new/data/examples/: diagnose_payload.json
backend-new/src/: __init__.py  diagnosis_engine.py  ingest.py  main.py  supabase_client.py
frontend/: DEV.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: ThemeProvider.tsx
frontend/src/hooks/: useHealth.ts
frontend/src/pages/: About.tsx  AlphaFold.tsx  Anamnesis.tsx  Batch.tsx  BloodAnalysis.tsx  BloodBiochemistry.tsx  CvAnalysis.tsx  Dashboard.tsx  GeneticAnalysis.tsx  History.tsx  IotMonitoring.tsx  (+9 more)
(+31 files in other folders)
