[project]
name = "hack-nu"
version = "0.1.0"
description = "Clinical diagnosis assistant using Kazakhstan clinical protocols (RAG + LLM)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # ── Challenge base deps ──────────────────────────────────────────
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "aiohttp>=3.9.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "ipykernel>=7.2.0",
    # ── RAG / Vector store ───────────────────────────────────────────
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.7.0",
    "numpy>=1.26.0",
    # ── Document parsing ─────────────────────────────────────────────
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    # ── API + validation ─────────────────────────────────────────────
    "pydantic>=2.0.0",
    "tqdm>=4.66.0",
    "aiofiles>=23.0.0",
]

[tool.uv]
# To regenerate lockfile after updating deps:
#   uv lock
# To install locally:
#   uv sync --no-dev
